# MindMapApp

./: .gitignore  AGENTS.md  README.md  REQ.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: build-deb.sh  build-dmg.sh  build-win.bat
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AppToolbar.vue  CanvasArea.vue  ContextMenu.vue  DeleteConfirmDialog.vue  ExportDialog.vue  MindCanvas.vue  NewMapDialog.vue  RightPanel.vue  UnsavedDialog.vue
src/composables/: useAutosave.ts  useExport.ts  useLocale.ts  useMindmapFile.ts  useRecentFiles.ts  useTheme.ts
src/stores/: mindmap.ts
src/styles/: global.css
src/types/: mindmap.ts
